Fixed a tiny issue with the logo on smaller screens.

--- a/assets/sass/templates/_header.scss
+++ b/assets/sass/templates/_header.scss
@@ -46,6 +46,13 @@
 
 .logo-small a img {
 	height: 58px;
+	padding-top: 0;
+
+	@media screen and (max-width: 660px) {
+    height: 100%;
+    width: 100%;
+    padding-top: 12px; 
+	}
 }
 
 
